--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
+org.gradle.parallel=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 org.gradle.jvmargs=-Xmx2048m
