--- a/SampleApp/src/androidMain/AndroidManifest.xml
+++ b/SampleApp/src/androidMain/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+            android:name=".KodicesSampleApplication"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".ui.MainActivity" android:exported="true">
