--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,13 @@
-android.nonFinalResIds=false
-android.nonTransitiveRClass=false
-android.useAndroidX=true
+kotlin.code.style=official
+
+#Gradle
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 org.gradle.parallel=true
+
+#Android
+android.nonTransitiveRClass=true
+android.useAndroidX=true
+
+#MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
-org.gradle.jvmargs=-Xmx2048m
+kotlin.mpp.enableCInteropCommonization=true
