--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
+org.gradle.configuration-cache=true
