--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,25 @@
 [versions]
 accompanist-webview = "0.32.0"
-android-compileSdk = "34"
-android-gradle-plugin = "8.5.0"
+android-compileSdk = "35"
+android-gradle-plugin = "8.7.3"
 android-minSdk = "28"
-android-targetSdk = "34"
-androidx-activity-compose = "1.9.0"
-androidx-core = "1.13.1"
+android-targetSdk = "35"
+androidx-activity-compose = "1.9.3"
+androidx-core = "1.15.0"
 androidx-datastore = "1.1.1"
 appcompat = "1.7.0"
 benchmark = "0.4.10"
-compose-jetbrains = "1.6.11"
+compose-jetbrains = "1.7.3"
 junit = "4.13.2"
-kotlin = "2.0.0"
-kotlinx-coroutines = "1.8.0"
-kotlinx-datetime = "0.6.0-RC.2"
-kotlinx-serialization = "1.6.3"
-kover = "0.7.6"
-ktlint = "12.0.3"
-ktor = "2.3.9"
-lifecycle = "2.8.0"
-okio = "3.8.0"
-skie = "0.8.0"
+kotlin = "2.1.0"
+kotlinx-coroutines = "1.9.0"
+kotlinx-datetime = "0.6.1"
+kotlinx-serialization = "1.7.3"
+kover = "0.9.0-RC"
+ktlint = "12.1.1"
+ktor = "3.0.2"
+lifecycle = "2.8.3"
+okio = "3.9.1"
 
 [libraries]
 accompanist-webview = { module = "com.google.accompanist:accompanist-webview", version.ref = "accompanist-webview" }
@@ -64,4 +63,3 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-skie = { id = "co.touchlab.skie", version.ref = "skie" }
