--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,21 +4,21 @@ android-compileSdk = "35"
 android-gradle-plugin = "8.7.3"
 android-minSdk = "28"
 android-targetSdk = "35"
-androidx-activity-compose = "1.9.3"
+androidx-activity-compose = "1.10.0"
 androidx-core = "1.15.0"
-androidx-datastore = "1.1.1"
+androidx-datastore = "1.1.2"
 appcompat = "1.7.0"
 benchmark = "0.4.10"
 compose-jetbrains = "1.7.3"
 junit = "4.13.2"
 kotlin = "2.1.0"
-kotlinx-coroutines = "1.9.0"
+kotlinx-coroutines = "1.10.1"
 kotlinx-datetime = "0.6.1"
-kotlinx-serialization = "1.7.3"
-kover = "0.9.0-RC"
-ktlint = "12.1.1"
-ktor = "3.0.2"
-lifecycle = "2.8.3"
+kotlinx-serialization = "1.8.0"
+kover = "0.9.0"
+ktlint = "12.1.2"
+ktor = "3.0.3"
+lifecycle = "2.8.4"
 okio = "3.9.1"
 
 [libraries]
