--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,26 @@
 [versions]
-accompanist-webview = "0.32.0"
-android-compileSdk = "35"
-android-gradle-plugin = "8.7.3"
+accompanist-webview = "0.36.0"
+android-compileSdk = "36"
+android-gradle-plugin = "8.10.0"
 android-minSdk = "28"
 android-targetSdk = "35"
-androidx-activity-compose = "1.10.0"
-androidx-core = "1.15.0"
-androidx-datastore = "1.1.2"
+androidx-activity-compose = "1.10.1"
+androidx-core = "1.16.0"
+androidx-datastore = "1.1.7"
 appcompat = "1.7.0"
-benchmark = "0.4.10"
-compose-jetbrains = "1.7.3"
+benchmark = "0.4.14"
+compose-jetbrains = "1.8.1"
 junit = "4.13.2"
-kotlin = "2.1.0"
-kotlinx-coroutines = "1.10.1"
-kotlinx-datetime = "0.6.1"
-kotlinx-serialization = "1.8.0"
-kover = "0.9.0"
-ktlint = "12.1.2"
-ktor = "3.0.3"
-lifecycle = "2.8.4"
-okio = "3.9.1"
+kotlin = "2.1.21"
+kotlinx-coroutines = "1.10.2"
+kotlinx-datetime = "0.6.2"
+kotlinx-serialization = "1.8.1"
+kover = "0.9.1"
+ktlint = "12.3.0"
+ktor = "3.1.3"
+lifecycle = "2.9.0"
+material-icons = "1.7.3"
+okio = "3.11.0"
 
 [libraries]
 accompanist-webview = { module = "com.google.accompanist:accompanist-webview", version.ref = "accompanist-webview" }
@@ -37,8 +38,8 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-websockets = { module = "io.ktor:ktor-client-websockets", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-server-cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
@@ -47,6 +48,8 @@ ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-host-common = { module = "io.ktor:ktor-server-host-common", version.ref = "ktor" }
 ktor-server-websockets = { module = "io.ktor:ktor-server-websockets", version.ref = "ktor" }
 lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+material-icons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "material-icons" }
+material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "material-icons" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 
 [plugins]
