--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*.{kt,kts}]
+[*.kt]
 indent_size = 4
 ij_continuation_indent_size = 4
 ktlint_code_style = ktlint_official
@@ -7,3 +7,19 @@ ktlint_standard_string-template-indent = disabled
 ktlint_standard_function-naming = disabled
 ktlint_standard_statement-wrapping = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_function-expression-body = disabled
+
+[*.kts]
+indent_size = 4
+ij_continuation_indent_size = 4
+ktlint_code_style = ktlint_official
+max_line_length = off
+ktlint_standard_string-template-indent = disabled
+ktlint_standard_function-naming = disabled
+ktlint_standard_statement-wrapping = disabled
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_function-expression-body = disabled
+ktlint_standard_chain-method-continuation = disabled
+
+[**/generated/**]
+ktlint = disabled
