--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ androidx-core = "1.16.0"
 androidx-datastore = "1.1.7"
 appcompat = "1.7.1"
 benchmark = "0.4.14"
-compose-jetbrains = "1.8.2"
+compose-jetbrains = "1.9.0-beta01"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
