--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 accompanist-webview = "0.36.0"
 android-compileSdk = "36"
-android-gradle-plugin = "8.11.1"
+android-gradle-plugin = "8.12.0"
 android-minSdk = "28"
 android-targetSdk = "36"
 androidx-activity-compose = "1.10.1"
-androidx-core = "1.16.0"
+androidx-core = "1.17.0"
 androidx-datastore = "1.1.7"
 appcompat = "1.7.1"
 benchmark = "0.4.14"
-compose-jetbrains = "1.9.0-beta01"
+compose-jetbrains = "1.9.0-beta03"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
@@ -17,10 +17,11 @@ kotlinx-datetime = "0.7.1"
 kotlinx-serialization = "1.9.0"
 kover = "0.9.1"
 ktlint = "13.0.0"
-ktor = "3.2.2"
-lifecycle = "2.9.1"
+ktor = "3.2.3"
+lifecycle = "2.9.2"
 material-icons = "1.7.3"
-okio = "3.15.0"
+okio = "3.16.0"
+skie = "0.10.5"
 
 [libraries]
 accompanist-webview = { module = "com.google.accompanist:accompanist-webview", version.ref = "accompanist-webview" }
@@ -66,3 +67,4 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+skie = { id = "co.touchlab.skie", version.ref = "skie" }
