--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,26 @@ gradle-app.setting
 !gradle-wrapper.properties
 
 *.preferences_pb
+
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Compiled C++ files
+*.out
+
+# Application specific files
+venv
+node_modules
+.sass-cache
