--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,16 +9,16 @@ androidx-core = "1.17.0"
 androidx-datastore = "1.1.7"
 appcompat = "1.7.1"
 benchmark = "0.4.14"
-compose-jetbrains = "1.9.0-rc01"
+compose-jetbrains = "1.9.0"
 junit = "4.13.2"
 kotlin = "2.2.10"
 kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.7.1"
 kotlinx-serialization = "1.9.0"
-kover = "0.9.1"
+kover = "0.9.2"
 ktlint = "13.1.0"
-ktor = "3.2.3"
-lifecycle = "2.9.3"
+ktor = "3.3.0"
+lifecycle = "2.9.4"
 material-icons = "1.7.3"
 okio = "3.16.0"
 skie = "0.10.6"
