--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ ktlint_standard_function-naming = disabled
 ktlint_standard_statement-wrapping = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
 ktlint_standard_function-expression-body = disabled
+ktlint_standard_chain-method-continuation = disabled
 
 [*.kts]
 indent_size = 4
