--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,32 @@
 [versions]
 accompanist-webview = "0.36.0"
 android-compileSdk = "36"
-android-gradle-plugin = "8.13.0"
+android-gradle-plugin = "9.0.0"
 android-minSdk = "28"
 android-targetSdk = "36"
-androidx-activity-compose = "1.11.0"
+androidx-activity-compose = "1.12.2"
 androidx-core = "1.17.0"
-androidx-datastore = "1.1.7"
+androidx-datastore = "1.2.0"
 appcompat = "1.7.1"
-benchmark = "0.4.14"
-compose-jetbrains = "1.9.0"
+benchmark = "0.4.15"
+composeMultiplatform = "1.10.0"
 junit = "4.13.2"
-kotlin = "2.2.10"
+kotlin = "2.3.0"
 kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.7.1"
 kotlinx-serialization = "1.9.0"
-kover = "0.9.2"
-ktlint = "13.1.0"
-ktor = "3.3.0"
-lifecycle = "2.9.4"
+kover = "0.9.4"
+ktlint = "14.0.1"
+ktor = "3.3.3"
+lifecycle = "2.9.6"
 material-icons = "1.7.3"
-okio = "3.16.0"
-skie = "0.10.6"
-vanniktech-publish = "0.34.0"
+material3 = "1.10.0-alpha05"
+okio = "3.16.4"
+skie = "0.10.9"
+vanniktech-publish = "0.35.0"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+material = "1.13.0"
 
 [libraries]
 accompanist-webview = { module = "com.google.accompanist:accompanist-webview", version.ref = "accompanist-webview" }
@@ -31,6 +35,13 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "androidx-datastore" }
 androidx-datastore-core-okio = { module = "androidx.datastore:datastore-core-okio", version.ref = "androidx-datastore" }
+compose-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "composeMultiplatform" }
+compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "composeMultiplatform" }
+compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "material3" }
+compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "composeMultiplatform" }
+compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "composeMultiplatform" }
+compose-ui-test = { module = "org.jetbrains.compose.ui:ui-test", version.ref = "composeMultiplatform" }
+compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "composeMultiplatform" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
@@ -53,14 +64,16 @@ lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-vie
 material-icons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "material-icons" }
 material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "material-icons" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
-allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version.ref = "kotlin" }
 androidApplication = { id = "com.android.application", version.ref = "android-gradle-plugin" }
-androidLibrary = { id = "com.android.library", version.ref = "android-gradle-plugin" }
+androidLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "android-gradle-plugin" }
 benchmark = { id = "org.jetbrains.kotlinx.benchmark", version.ref = "benchmark" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-jetbrains" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
