--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 accompanist-webview = "0.36.0"
-android-compileSdk = "36"
-android-gradle-plugin = "9.0.0"
-android-minSdk = "28"
+agp = "9.0.0" #noinspection UnusedVersionCatalogEntry
+android-compileSdk = "36" #noinspection UnusedVersionCatalogEntry
+android-minSdk = "28" #noinspection UnusedVersionCatalogEntry
 android-targetSdk = "36"
 androidx-activity-compose = "1.12.2"
 androidx-core = "1.17.0"
@@ -10,7 +10,9 @@ androidx-datastore = "1.2.0"
 appcompat = "1.7.1"
 benchmark = "0.4.15"
 composeMultiplatform = "1.10.0"
+espressoCore = "3.7.0"
 junit = "4.13.2"
+junitVersion = "1.3.0"
 kotlin = "2.3.0"
 kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.7.1"
@@ -24,9 +26,6 @@ material3 = "1.10.0-alpha05"
 okio = "3.16.4"
 skie = "0.10.9"
 vanniktech-publish = "0.35.0"
-junitVersion = "1.3.0"
-espressoCore = "3.7.0"
-material = "1.13.0"
 
 [libraries]
 accompanist-webview = { module = "com.google.accompanist:accompanist-webview", version.ref = "accompanist-webview" }
@@ -42,7 +41,7 @@ compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.re
 compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "composeMultiplatform" }
 compose-ui-test = { module = "org.jetbrains.compose.ui:ui-test", version.ref = "composeMultiplatform" }
 compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "composeMultiplatform" }
-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
+gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -66,11 +65,10 @@ material-icons-extended = { module = "org.jetbrains.compose.material:material-ic
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "android-gradle-plugin" }
-androidLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "android-gradle-plugin" }
+androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 benchmark = { id = "org.jetbrains.kotlinx.benchmark", version.ref = "benchmark" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
